--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <title>My app</title>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <base href="/">
   </head>
   <body>
     <app-root>Loading...</app-root>
+    <script src="script.js"></script>
   </body>
 </html>
