--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>My app</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global_style.css">
     <meta charset="UTF-8" />
     <base href="/">
   </head>
